--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura book Anthony e Ruinei os lindos</title>
     <link rel="stylesheet" href="style.css">
-    <link rel=”stylesheet” href="reset.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
+
 <body>
-    <h1>AluraBook</h1>
+    <header class="cabeçalho">
+        <div class="container">
+            <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+            <img src="./Logo.svg" alt="Logo da AluraBooks">
+        </div>
+        <div class="container">
+            <a href="#"><img src="./Favoritos.svg" alt="Meus favoritos"></a>
+            <a href="#"><img src="./Sacola.png" alt="Carrinho de compras"></a>
+            <a href="#"><img src="./Usuário.svg" alt="Meu perfil"></a>
+        </div>
+    </header>
 </body>
+
 </html>
